# analisador_curriculos

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/analyze/: endpoints.py
app/api/v1/logs/: endpoints.py
app/core/: config.py
app/db/: mongo.py
app/repository/: log_repository.py
app/services/: analyze_service.py  log_service.py  mongo_service.py
app/utils/: llm_utils.py  ocr_utils.py  validators.py
tests/utils/: test_process_files.py
